fix: 生产构建与 Java 17 兼容；音乐代理与仓库瘦身
- ApiResponse.error 改为泛型，修复 MusicController 返回类型
- AdminOjProblemController 使用 JpaRepository.findById 替代 selectById
- JudgeController 用普通 Thread 替代 Thread.ofVirtual（Java 17）
- MusicPlayer 未使用参数改为 _track
- 新增网易云歌单代理、生产 env、start.sh；从仓库移除 public/BGM 大文件

Made-with: Cursor